@@ -16,15 +16,15 @@
 
 package org.gradle.launcher.daemon.server.scaninfo
 
-import org.gradle.api.JavaVersion
+
 import org.gradle.integtests.fixtures.daemon.DaemonIntegrationSpec
 import org.gradle.integtests.fixtures.executer.ExecutionResult
-import org.gradle.integtests.fixtures.executer.GradleContextualExecuter
 import org.gradle.integtests.fixtures.timeout.IntegrationTestTimeout
 import org.gradle.launcher.daemon.client.SingleUseDaemonClient
 import org.gradle.test.fixtures.server.http.BlockingHttpServer
 import org.gradle.test.precondition.Requires
-import org.gradle.test.preconditions.UnitTestPreconditions
+import org.gradle.test.preconditions.JdkVersionTestPreconditions
+
 import org.gradle.util.internal.GFileUtils
 import org.junit.Rule
 
@@ -59,7 +59,7 @@ class DaemonScanInfoIntegrationSpec extends DaemonIntegrationSpec {
     }
 
     //Java 9 and above needs --add-opens to make environment variable mutation work
-    @Requires(UnitTestPreconditions.Jdk8OrEarlier)
+    @Requires(JdkVersionTestPreconditions.Jdk8OrEarlier)
     def "should capture basic data when a foreground daemon runs multiple builds"() {
         given:
         buildFile << """
@@ -97,7 +97,6 @@ class DaemonScanInfoIntegrationSpec extends DaemonIntegrationSpec {
         """
 
         when:
-        openJpmsModulesForConfigurationCache()
         if (continuous) {
             executer.withArgument('waitForExpiration')
             executer.withArgument('--continuous')
@@ -127,7 +126,6 @@ class DaemonScanInfoIntegrationSpec extends DaemonIntegrationSpec {
         """
 
         when:
-        openJpmsModulesForConfigurationCache()
         executer.withArgument('waitForExpiration').run()
 
         then:
@@ -140,7 +138,6 @@ class DaemonScanInfoIntegrationSpec extends DaemonIntegrationSpec {
            ${imports()}
            ${waitForExpirationTask()}
         """
-        openJpmsModulesForConfigurationCache()
         executer.withArgument('waitForExpiration').run()
 
         then:
@@ -161,7 +158,6 @@ class DaemonScanInfoIntegrationSpec extends DaemonIntegrationSpec {
 
         when:
         startAForegroundDaemon()
-        openJpmsModulesForConfigurationCache()
         executer.withTasks('waitForExpiration').run()
 
         then:
@@ -274,12 +270,4 @@ class DaemonScanInfoIntegrationSpec extends DaemonIntegrationSpec {
         import org.gradle.launcher.daemon.server.expiry.*
         """
     }
-
-    private void openJpmsModulesForConfigurationCache() {
-        if (JavaVersion.current().isJava9Compatible() && GradleContextualExecuter.isConfigCache()) {
-            // For java.util.concurrent.CountDownLatch being serialized reflectively by configuration cache
-            executer.withArgument('-Dorg.gradle.jvmargs=--add-opens java.base/java.util.concurrent=ALL-UNNAMED --add-opens java.base/java.util.concurrent.locks=ALL-UNNAMED')
-        }
-    }
-
 }
